--- a/web/package.json
+++ b/web/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.1",
     "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
     "@mui/styles": "^5.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "next": "12.2.4",
     "next-auth": "^4.10.3",
+    "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-social-login-buttons": "^3.6.1"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
