--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
     "@mui/styles": "^5.9.3",
+    "@mui/x-data-grid": "^5.15.1",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
