--- a/server/spring/build.gradle
+++ b/server/spring/build.gradle
@@ -24,20 +24,27 @@ ext {
 }
 
 dependencies {
+	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.7.2'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.2'
+	runtimeOnly 'org.postgresql:postgresql:42.3.6'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.2'
+
+	//Map structs dependencies to handle bind annotations
+	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.7.2'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.2'
 //	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
-//	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.7.2'
-//	runtimeOnly 'org.postgresql:postgresql:42.3.6'
 //	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.7.2'
-//	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.2'
 //	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.6.RELEASE'
 //	testImplementation 'org.springframework.security:spring-security-test:5.7.2'
 }
