--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-onesignal": "^2.0.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-social-login-buttons": "^3.6.1"
